--- a/app/static/style.css
+++ b/app/static/style.css
@@ -41,3 +41,13 @@ nav{
 .nav-links a:hover{
 	color: #8cff1a;
 }
+
+@keyframes image{
+	0% {opacity: 0.3;}
+	100%{opacity: 1;}
+}
+
+img{
+	animation-name: image;
+	animation-duration: 2s;
+}
