--- a/app/static/style.css
+++ b/app/static/style.css
@@ -51,3 +51,47 @@ img{
 	animation-name: image;
 	animation-duration: 1s;
 }
+
+.wrapper{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.link-button{
+	text-decoration: none;
+	font-family: 'Poppins', sans-serif;
+	color: #408000;
+	/*height: 30px;*/
+	font-size: 15px;
+	font-weight: bold;
+	border: none;
+	background-color: #d9ffb3;
+	transition-duration: 0.2s;
+	padding: 10px;
+	/*margin: 4px 4px;*/
+	letter-spacing: 1.5px;
+	border-radius: 4px;
+	text-align: center;
+	display: inline-block;
+}
+
+.link-button:hover{
+	font-family: 'Poppins', sans-serif;
+	color: #ffffff;
+	/*height: 30px;*/
+	font-size: 15px;
+	font-weight: bold;
+	border: none;
+	box-shadow: none;
+	background-color: #408000;
+}
+
+.function{
+	display: flex;
+	gap: 20px;
+	flex-direction: column;
+	list-style: none;
+	justify-content: space-around;
+	align-items: center;
+}
