--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,6 +25,7 @@
 		<li><a href="{{ url_for('login.logout') }}">Logout</a></li>
 		{% else %}
 		<li><a href="{{ url_for('login.logIn') }}">Login</a></li>
+		<li><a href="{{ url_for('register.register') }}">Register</a></li>
 		{% endif %}
 		</li>
 		<li><a href="#">About</a>
