--- a/app/static/fstyles.css
+++ b/app/static/fstyles.css
@@ -62,3 +62,16 @@
 	border: none;
 	border-bottom: 2px solid #408000;
 }
+
+
+.custom-select{
+	/*appearance: none;*/
+	border: none;
+	border-bottom: 1px solid #408000;
+	background-color: transparent;
+	border-radius: 6px;
+	outline: none;
+	height: 30px;
+	font-size: 16px;
+
+}
