added code for errors

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,6 +21,10 @@
 	<br>
 	{{ form.password.label }} {{ form.password() }}
 	<br>
+	<p>
+		{{msg}}
+	</p>
+	<br>
 	{{ form.submit() }}
 	<br>
 </form>
