--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,6 +27,11 @@
 	<br>
 	{{ form.type_.label }} {{ form.type_() }}
 	<br>
+		<p>
+			{{msg}}
+		</p>
+	<br>
+
 	{{ form.submit() }}
 	<br>
 </form>
