adds roles_eligibility

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -40,6 +40,7 @@
 <ul class="function">
 <li><a href="{{ url_for('profile.edit_profile')}}" class="link-button">Edit Your Profile</a></li>
 <li><a href="#" class="link-button">View Your Profile</a></li>
+<li><a href="#" class="link-button">Eligible Roles</a></li>
 </ul>
 </div>
 {% elif session['user']['type_'] == 'company' %}
