adds Approval Code

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -47,12 +47,21 @@
 <div class="wrapper">
 <img src ="{{ url_for('static', filename='images/undraw_Business_decisions_re_84ag.png') }}">
 <ul class="function">
+<li><a href="{{ url_for('profile.com_profile')}}" class="link-button">Profile</a></li>
+{% if msg == 'True' %}
 <li><a href="{{ url_for('role.role_create')}}" class="link-button">Create a Role</a></li>
+{% endif %}
 <!-- <li><a href="#" class="link-button">View Your Profile</a></li> -->
 </ul>
 </div>
 {% else %}
+<div class="wrapper">
 <img src ="{{ url_for('static', filename='images/undraw_Experts_re_i40h.png') }}">
+<ul class="function">
+<li><a href="{{ url_for('admin.pend_roles',com_uid='NULL')}}" class="link-button">Allow Companies</a></li>
+
+</ul>
+</div>
 {% endif %}
 {% else %}
 <img src="{{ url_for('static', filename='images/undraw_Profile_re_4a55.png') }}">
