--- a/app/templates/view_profile.html
+++ b/app/templates/view_profile.html
@@ -13,8 +13,13 @@
 {% block body %}
 <nav>
 	<div class="logo">
-		<h4>your profile</h4>
-	</div>
+		<h4>{{profile['fname']}}'s profile</h4>
+    </div>
+    <ul class = "nav-links">
+    <li><a href="{{url_for('main.home')}}">Home</a>
+    </li>
+  </ul>
+	
 </nav>
 <div class = 'div-form'>
 <table class="table">
@@ -55,12 +60,12 @@
     <tr>
       <th scope="row">resume</th>
       
-      <td>{{profile['resume']}}</td>
+      <td>{{profile['resume_link']}}</td>
     </tr>
     <tr>
       <th scope="row">email</th>
       
-      <td>{{profile['mail_id']}}</td>
+      <td>{{profile['email_id']}}</td>
     </tr>
     <tr>
       <th scope="row">placement_status</th>
@@ -71,6 +76,5 @@
 </table>
 
 
-<li><a href="{{ url_for('main.home')}}" class="link-button"> Go to your home page</a></li>
 </div>
 {% endblock %}
