slots by admin added

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -59,7 +59,7 @@
 <div class="wrapper">
 <img src ="{{ url_for('static', filename='images/undraw_Experts_re_i40h.png') }}">
 <ul class="function">
-<li><a href="{{ url_for('admin.pend_roles',com_uid='NULL')}}" class="link-button">Allow Companies</a></li>
+<li><a href="{{ url_for('admin.pend_roles')}}" class="link-button">Allow Companies</a></li>
 
 </ul>
 </div>
