--- a/app/static/vstyles.css
+++ b/app/static/vstyles.css
@@ -3,6 +3,7 @@
 .jobs-list-container{
 	display:flex;
 	justify-content: space-around;
+	flex-wrap: wrap;
 	padding: 20px;
 	font-family: 'Poppins', sans-serif;
 }
@@ -13,6 +14,8 @@
 	border: 1px solid #408000;
 	border-radius: 5px;
 	padding: 10px;
+	padding-bottom: 10px;
+	margin: 5px;
 }
 
 .details{
