--- a/app/templates/view_profile.html
+++ b/app/templates/view_profile.html
@@ -28,47 +28,47 @@
  
   <tbody>
     <tr>
-      <th scope="row">user id</th>
+      <th scope="row" class="trow">user id</th>
       
       <td>{{profile['stu_uid']}}</td>
     </tr>
     <tr>
-      <th scope="row">first name</th>
+      <th scope="row" class="trow">first name</th>
     
       <td>{{profile['fname']}}</td>
     </tr>
     <tr>
-      <th scope="row">last name</th>
+      <th scope="row" class="trow">last name</th>
       
       <td>{{profile['lname']}}</td>
     </tr>
     <tr>
-      <th scope="row">cgpa</th>
+      <th scope="row" class="trow">cgpa</th>
       
       <td>{{profile['cgpa']}}</td>
     </tr>
     <tr>
-      <th scope="row">branch</th>
+      <th scope="row" class="trow">branch</th>
       
       <td>{{profile['branch']}}</td>
     </tr>
     <tr>
-      <th scope="row">contact_no</th>
+      <th scope="row" class="trow">contact_no</th>
      
       <td>{{profile['contact_no']}}</td>
     </tr>
     <tr>
-      <th scope="row">resume</th>
+      <th scope="row" class="trow">resume</th>
       
       <td>{{profile['resume_link']}}</td>
     </tr>
     <tr>
-      <th scope="row">email</th>
+      <th scope="row" class="trow">email</th>
       
       <td>{{profile['email_id']}}</td>
     </tr>
     <tr>
-      <th scope="row">placement_status</th>
+      <th scope="row" class="trow">placement_status</th>
       
       <td>{{profile['placement_status']}}</td>
     </tr>
