--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -45,7 +45,7 @@
 </div>
 {% elif session['user']['type_'] == 'company' %}
 <div class="wrapper">
-<img src ="{{ url_for('static', filename='images/undraw_Business_decisions_re_84ag.png') }}">
+<img class = "image" src ="{{ url_for('static', filename='images/undraw_Business_decisions_re_84ag.png') }}">
 <ul class="function">
 <li><a href="{{ url_for('profile.com_profile')}}" class="link-button">Profile</a></li>
 {% if msg == 'True' %}
@@ -57,7 +57,7 @@
 </div>
 {% else %}
 <div class="wrapper">
-<img src ="{{ url_for('static', filename='images/undraw_Experts_re_i40h.png') }}">
+<img class="image" src ="{{ url_for('static', filename='images/undraw_Experts_re_i40h.png') }}">
 <ul class="function">
 <li><a href="{{ url_for('admin.pend_roles')}}" class="link-button">Allow Companies</a></li>
 
