--- a/app/templates/view_roles.html
+++ b/app/templates/view_roles.html
@@ -42,7 +42,8 @@
 			{% elif each_role['status'] == 'A' %}
 			<li><button class = "status-button-applied">Applied</button></li>
 			{% elif each_role['status'] == 'ACC' %}
-			<li><button class = "status-button-accepted">Accepted</button></li>
+			<li><a href="{{ url_for('jobs.accept_job', role_id = each_role['role_id']) }}" class="link-button">Accept</a></li>
+			<li><a href="{{ url_for('jobs.reject_job', role_id = each_role['role_id']) }}" class="link-button">Deny</a></li>
 			{% elif each_role['status'] == 'REJ' %}
 			<li><button class = "status-button-rejected">Rejected</button></li>
 			{% endif %}
