--- a/app/static/style.css
+++ b/app/static/style.css
@@ -107,3 +107,54 @@ img{
 	height:auto;
 }
 
+.roles-wrapper{
+	display:flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+	padding: 20px;
+}
+
+.role-container{
+	display: flex;
+	flex-direction: column;
+	border: 1px solid #408000;
+	border-radius: 5px;
+	padding: 10px;
+	padding-bottom: 10px;
+	margin: 5px;
+}
+
+.dates{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	font-size: 15px;
+	text-transform: uppercase;
+	margin: 10px;
+	gap: 8px;
+}
+
+.links{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;	
+	font-size: 15px;
+	gap: 8px;
+	text-transform: uppercase;
+	margin: 10px;
+}
+
+.links a{
+	text-decoration: none;
+	color: #408000;
+	letter-spacing: 2px;
+	font-weight: bold;
+	font-size: 15px;
+	padding: 6px;
+	border-radius: 4px;
+}
+
+.links a:hover{
+	color: #ffffff;
+	background-color: #408000;
+}
