--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -13,6 +13,11 @@
 	<div class="logo">
 		<h4>Login Form</h4>
 	</div>
+	<ul class = "nav-links">
+		<li><a href="{{ url_for('main.home') }}">Home</a></li>
+		<li><a href="{{ url_for('register.register') }}">Register</a></li>
+		<li><a href="#">About</a></li>
+	</ul>
 </nav>
 <div class = 'div-form'>
 <form method="POST" class = 'Lform'>
