--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -15,6 +15,12 @@
 	<div class="logo">
 		<h4>Registration Form</h4>
 	</div>
+	<ul class = "nav-links">
+		<li><a href="{{ url_for('main.home') }}">Home</a></li>
+		<li><a href="{{ url_for('login.logIn') }}">Login</a></li>
+		<li><a href="#">About</a>
+		</li>
+	</ul>
 </nav>
 <div class = 'div-form'>
 <form method="POST" class = 'Lform'>
