--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,3 +1,4 @@
+<!---for home page in 4 cases, no user or company or admin or student--->
 {% extends "base.html" %}
 
 {% block title %}Home{% endblock %}
