--- a/app/templates/view_students.html
+++ b/app/templates/view_students.html
@@ -1,3 +1,4 @@
+<!---To view the status of application of students applied for the role--->
 {% extends "base.html" %}
 
 {% block title %}Home{% endblock %}
