--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -17,7 +17,7 @@
 <!-- <h1>Home Page</h1> -->
 <nav>
 	<div class="logo">
-		<h4>Placemnent Management</h4>
+		<h4>Placement Management</h4>
 	</div>
 	<ul class = "nav-links">
 		<li><a href="#">Home</a>
