--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,8 @@
 		<li><a href="{{ url_for('register.register') }}">Register</a></li>
 		{% endif %}
 		</li>
-		<li><a href="#">About</a>
+		<li><a href="{{ url_for('about.placement_stat') }}">About</a>
+		
 		</li>
 	</ul>
 </nav>
